<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.pengertian.PengertianFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="6dp">

        <ImageView
            android:id="@+id/bud"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:src="@drawable/nav_drawer_cagar"
            />

        <TextView
            android:id="@+id/justifyTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/pengertian"

            android:layout_marginTop="18dp"


            android:text="@string/paragraf" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/prg"
            android:id="@+id/pg"
            android:layout_below="@id/justifyTextView"
            android:layout_marginTop="3dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pgdua"
            android:id="@+id/baru"
            android:layout_below="@+id/pg"
            android:layout_marginTop="3dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/paragrafdua"
            android:text="@string/paragrafdua"
            android:layout_below="@id/baru"
            android:layout_marginTop="3dp"/>


        <TextView
            android:id="@+id/justifyTextView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/paragrafdua"
            android:layout_marginTop="3dp"

            android:text="@string/pengertian_cagar_budaya_" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cagar"
            android:id="@+id/cagar"
            android:layout_below="@+id/justifyTextView2"/>


        <TextView
            android:id="@+id/pengertian"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/bud"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="17dp"

            android:fontFamily="sans-serif-smallcaps"
            android:foregroundGravity="center_horizontal"
            android:gravity="center"
            android:text="APA ITU CAGAR BUDAYA ?"
            android:textColor="#000"
            android:textSize="30sp" />

    </RelativeLayout>


</FrameLayout>